--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,12 +7,10 @@
 	  <%= csrf_meta_tags %>
 	</head>
 	<body>
-
 	<%= render "layouts/header" %>
-
+	<div class="container">
 	<%= yield %>
-
 	<%= render "layouts/footer" %>
-
-	</body>
+</div>
+</body>
 </html>
