Add Pins Scaffold

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,6 +4,6 @@
 by
 <%= link_to "Mattan Griffel", "http://mattangriffel.com" %>
 <hr>
-Thanks to Kaveri Roy for my first Ruby on Rails application.<p>
+Thanks to Kaveri for my first Ruby on Rails application.<p>
 </small>
 </div>
