--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,10 @@
 	<h1>You're logged in!</h1>
 <% else %>
 	<div class="hero-unit">
-		<h1>Welcome to One Month Rails!</h1>
+		<!-- <h1>Welcome to One Month Rails!</h1> -->
+		<center>
+		<h1> Welcome to Dave's Rails App!</h1>
+		<h2> This is the One Month Rails Sample Application</h2>
 		<p>
 			You've found the home page for the 
 			<%= link_to "One Month Rails", "http://onemonthrails.com" %>
@@ -11,5 +14,6 @@
 		<p>
 			<%= link_to "Sign Up Now!", new_user_registration_path, class: "btn btn-primary btn-large" %>
 		</p/>
+		</center>
 	</div>
 <% end %>
